--- a/client/src/app/login/login.component.css
+++ b/client/src/app/login/login.component.css
@@ -1,3 +1,12 @@
 #okta-signin-container {
   margin-top: 25px;
 }
+
+@media only screen
+and (min-device-width: 414px)
+and (max-device-width: 736px)
+and (-webkit-min-device-pixel-ratio: 3) {
+  #okta-signin-container {
+    margin-top: 0;
+  }
+}
