Upgrade to Sign-In Widget 2.5.0

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,7 +3,7 @@
   <span class="fill-remaining-space"></span>
   <span *ngIf="user">
     Welcome {{user?.name}}!
-    <button md-button (click)="oktaService.logout()">Logout</button>
+    <button mat-button (click)="oktaService.logout()">Logout</button>
   </span>
 </mat-toolbar>
 
